# evaluate-hyper-extract

./: .gitignore  README.md  final_report.pickle  mlflow.db  pyproject.toml
data/: entities.json  template.yaml
data/corpus/: maintenance_log.md  unit1_cooling.md  unit2_overview.md
docs/: OVERVIEW.md  design.md  implementation-plan.md  implementation.md  status.md
scripts/: make_visuals.py
src/eval_hyper_extract/: __init__.py  clients.py  clients_module.py  config_module.py  corpus_module.py  env.py  extract.py  extract_module.py  metrics.py  metrics_module.py  report.py  report_module.py  resolve.py  resolve_module.py  resolve_splink.py  resolve_splink_module.py  run.py  schema.py  viz_module.py
tests/: conftest.py  fakes.py
tests/fixtures/: mini_entities.json  mini_graph.json
tests/unit/: test_t0_scaffold.py  test_t11_5_splink.py  test_t1_fixtures.py  test_t2_data.py  test_t3_config.py  test_t4_clients.py  test_t5_corpus.py  test_t6_extract.py  test_t7_metrics.py  test_t8_5_viz.py  test_t8_resolve.py  test_t9_report.py
